Portfolio stuff - added expand/collapse all button - fixed jquery stuff - refactored portfolio display methods - changed some string formatting - modified initializer data

--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -96,6 +96,19 @@ h5, h6 {
 		text-decoration: none;
 	}
 
+.green{
+	color: green;
+}
+
+.red {
+	color: red;
+}
+
+.subtext {
+	font-weight:300;
+	color: gray;
+}
+
 /* main layout
 ----------------------------------------------------------*/
 .content-wrapper {
